syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "CRMSolution.Grpc.Client";

enum GrpcTaskStatus
{
  New = 0;
  InProgress = 1;
  Completed = 2;
}
package client;

service ClientGrpcService {
  rpc GetClientByEmail (GetClientByEmailRequest) returns (GetClientResponse);
  rpc GetClientById (GetClientByIdRequest) returns (GetClientResponse);
  rpc GetClientsByIds (GetClientsByIdsRequest) returns (GetClientsByIdsResponse);
  rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
  rpc ChangeDataClient (ChangeDataClientRequest) returns (ChangeDataClientResponse);
  rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
  rpc GetAllClients (GetAllClientsRequest) returns (GetAllClientsResponse);
  rpc GetClientsWithOrdersAndTasks(GetClientWithOrdersAndTasksRequest) returns (GetClientsWithOrdersAndTasksResponse);
  rpc GetDashboardData(GetDashboardDataRequest) returns (GetDashboardDataResponse);
}

message GetDashboardDataResponse{
  double ordersTotalAmount = 1;
  int32 ordersCount = 2;
  repeated google.protobuf.Timestamp ordersCreatedDates = 3;
  int32 clientsAmount = 4;
  repeated GrpcTaskStatus tasksStatuses = 5;
  int32 tasksCount = 6;
}
message GetDashboardDataRequest{}

message GetClientWithOrdersAndTasksRequest {}

message GetClientsWithOrdersAndTasksResponse {
  repeated ClientWithOrdersAndTasks clients = 1;
}

message ClientWithOrdersAndTasks {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  google.protobuf.Timestamp createdAt = 6;
  repeated KanbanOrder orders = 7;
}

message KanbanOrder {
  int32 id = 1;
  double totalAmount = 2;
  string status = 3;
  google.protobuf.Timestamp createdAt = 4;
  repeated TaskDto tasks = 5;
}

message TaskDto {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  google.protobuf.Timestamp dueDate = 5;
}


message SortClientRequest{
  string sortBy = 1;
  bool descending = 2;
}

message ClientInfo {
  string name = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
  google.protobuf.Timestamp createdAt = 5;
  int32 orderId = 6;
  int32 id = 7;
}

message GetAllClientsRequest {
  SortClientRequest sort = 1;
}

message GetAllClientsResponse {
  repeated ClientInfo clients = 1;
}

message DeleteClientResponse{
  int32 id = 1;
}
message DeleteClientRequest{
  string email = 1;
}

message ChangeDataClientResponse{
  string name = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
  int32 id = 5;
}
message ChangeDataClientRequest{
  string name = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
  string oldEmail = 5;
}

message CreateClientResponse{
  string name = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
  int32 id = 5;
  google.protobuf.Timestamp createdAt = 6;
}
message CreateClientRequest{
  string name = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
}
message DefaultClientResponse{
  bool success = 1;
  string message = 2;
}

message GetClientByEmailRequest {
  string email = 1;
  int32 orderId = 2;
}
message GetClientByIdRequest{
  int32 clientId = 1;
}

message GetClientResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  google.protobuf.Timestamp CreatedAt = 6;
}

message GetClientsByIdsRequest {
  repeated int32 ids = 1;
}

message GetClientsByIdsResponse {
  repeated string ClientName = 1;
}

