syntax = "proto3";

import "google/protobuf/timestamp.proto";
option csharp_namespace = "CRMSolution.Grpc.Tasks";

package task;

enum GrpcTaskStatus
{
    New = 0;
    InProgress = 1;
    Completed = 2;
}

service TaskGrpcService {
  rpc GetTaskById (GetTaskByIdRequest) returns (GetTaskByIdResponse);
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTaskByOrderId (GetTaskByIdRequest) returns (GetTaskByOrderIdResponse);
  rpc GetTasksByOrderIds (GetTasksByOrderIdsRequest) returns (GetTasksByOrderIdsResponse);
  rpc GetTasksByUserIds (GetTasksByUserIdsRequest) returns (GetTasksByUserIdsResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (TaskInfo);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc GetAllTasks(GetAllTasksRequest) returns (GetAllTasksResponse);
}

message DeleteTaskResponse{
  int32 taskId = 1;
}

message GetTasksByUserIdsRequest {
  repeated int32 userIds = 1;
}
message TaskWithUserId {
  int32 userId = 1;
  int32 id = 2;
  string title = 3;
  string description = 4;
  GrpcTaskStatus status = 5;
  google.protobuf.Timestamp dueDate = 6;
}
message GetTasksByUserIdsResponse {
  repeated TaskWithUserId tasks = 1;
}


message GetTaskByIdRequest {
  int32 id = 1;
}
message DeleteTaskRequest{
  int32 id = 1;
}

message GetTaskByIdResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  int32 status = 4;
  google.protobuf.Timestamp dueDate = 5;
  int32 orderId = 6;
}

message CreateTaskResponse{
  int32 Id = 1;
  string title = 2;
  string description = 3;
  GrpcTaskStatus status = 4;
  google.protobuf.Timestamp dueDate = 5;
  int32 orderId = 6;
}
message CreateTaskRequest {
  int32 orderId = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp dueDate = 4;
}

message DefaultTaskResponse {
  bool success = 1;
  string message = 2;
}

message GetTaskByOrderIdResponse{
  repeated GetTaskByIdResponse tasks = 1;
}

message GetTasksByOrderIdsRequest {
  repeated int32 orderIds = 1;
}

message GetTasksByOrderIdsResponse {
  repeated GetTaskByIdResponse tasks = 1;
}

message UpdateTaskRequest{
  GrpcTaskStatus status = 1;
  string description = 2;
  int32 taskId = 3;
}

message SortTasksRequest{
  string sortBy = 1;
  bool descending = 2;
}

message TaskInfo {
  int32 id = 1;
  string title = 2;
  string description = 3;
  GrpcTaskStatus status = 4;
  google.protobuf.Timestamp dueDate = 5;
  int32 orderId = 6;
  string username = 7;
}

message GetAllTasksRequest {
  SortTasksRequest sort = 1;
}

message GetAllTasksResponse {
  repeated TaskInfo tasks = 1;
}
